syntax = "proto3";

package microsevice.mail;
option go_package = "mail/rpc/mail";

// Mail microservice
service Mail {
  // Transmits the entries
  rpc SendTestMail(SendTestMailInput) returns (SendTestMailResult);

  // Send Custom Mail
  rpc SendCustomMail(SendCustomMailInput) returns (SendCustomMailResult);
}

message SendTestMailInput {
    string name = 1;  
    string email = 2; 
    string message = 3;
    string phone = 4;
    string title = 5;
    string preview = 6;
}

message SendTestMailResult {
}

message SendCustomMailInput {
  string from = 1;
  string to = 2;
  string subject = 3;
  string body = 4;
  string title = 5;
  string preview = 6;
}

message SendCustomMailResult {
}